# django-learning

./: README.md
01-bases/: Pipfile
01-bases/django-empleados/empleado/: asgi.py  urls.py  wsgi.py
01-bases/django-empleados/templates/: base.html
01-blog/mysite/blog/: feeds.py  managers.py  urls.py
01-blog/mysite/mysite/: settings.py  urls.py
02-magazine/: Pipfile
02-magazine/django-myproject/myproject/: asgi.py  wsgi.py
02-social-website/: .gitignore
02-social-website/socialApp/templates/: base.html
03-biblioteca/: Pipfile
03-biblioteca/django-biblioteca/core/: urls.py
06-web-development-book/: .gitignore  pyproject.toml
06-web-development-book/bookr/bookr/: settings.py  urls.py
06-web-development-book/bookr/reviews/: models.py  views.py
06-web-development-book/bookr/reviews/management/commands/: loadcsv.py
06-web-development-book/bookr/reviews/migrations/: 0001_initial.py
06-web-development-book/bookr/reviews/templates/: base.html  search.html
07-agendadj/agenda/: secret.json
07-agendadj/agenda/agenda/: urls.py
07-agendadj/requirements/: local.txt
08-tiendadj/: .gitignore
08-tiendadj/requirements/: local.txt
08-tiendadj/tienda/: secret.json
09-usuariosdj/: .gitignore
09-usuariosdj/django-app/: secret.json
09-usuariosdj/requirements/: local.txt
10-blog/: Pipfile
10-blog/mysite/: README.md
12-drf-profiles-api/: LICENSE  Vagrantfile  requirements.txt
12-drf-profiles-api/profiles_api/: models.py  permissions.py  serializers.py  urls.py  views.py
12-drf-profiles-api/profiles_project/: settings.py
(+151 files in other folders)
