[tool.poetry]
name = "06-web-development-book"
version = "0.1.0"
description = ""
authors = ["David A. Casas <ise.david.casas@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "3.2"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
